Changes corresponding to changes in Rails 4.1 to support MySQL 5.7.3.
Commit in ActiveRecord: https://github.com/rails/rails/commit/b6655885ef13cf8d1705dc9b5232846f0207febd:
Remove `DEFAULT NULL` for primary key column to support MySQL 5.7.3
Since MySQL 5.7.3 m13 does now allow primary key column is null.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+## 1.1.0	(13 May 2014)
+
+Improvement:
+   - Changes corresponding to changes in Rails 4.1 to support MySQL 5.7.3
+
+
 ## 1.0.0	(21 April 2014)
 
 New Features:
